think about some possible parallelization of test execution